[gd_scene load_steps=6 format=3 uid="uid://c74s6s65wgbov"]

[ext_resource type="Script" path="res://scripts/news.gd" id="1_f1k28"]
[ext_resource type="Texture2D" uid="uid://bj7nn0i6cm7g7" path="res://background.jpg" id="1_frbyv"]
[ext_resource type="Texture2D" uid="uid://bb3o3vp5417kn" path="res://home.png" id="3_q22wn"]

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_v0y7f"]

[sub_resource type="FontFile" id="FontFile_b1xkq"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/200/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/175/0 = Vector2(0, 0)
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/80/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/200/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/175/0 = Vector2(0, 0)
cache/0/200/0/ascent = 0.0
cache/0/200/0/descent = 0.0
cache/0/200/0/underline_position = 0.0
cache/0/200/0/underline_thickness = 0.0
cache/0/200/0/scale = 1.0
cache/0/200/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/200/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/200/0/kerning_overrides/200/0 = Vector2(0, 0)
cache/0/200/0/kerning_overrides/175/0 = Vector2(0, 0)
cache/0/175/0/ascent = 0.0
cache/0/175/0/descent = 0.0
cache/0/175/0/underline_position = 0.0
cache/0/175/0/underline_thickness = 0.0
cache/0/175/0/scale = 1.0
cache/0/175/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/175/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/175/0/kerning_overrides/200/0 = Vector2(0, 0)
cache/0/175/0/kerning_overrides/175/0 = Vector2(0, 0)

[node name="news" type="Node2D"]
script = ExtResource("1_f1k28")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Meshes" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Meshes"]
position = Vector2(-1, -4.76837e-07)
scale = Vector2(0.196384, 0.169875)
texture = ExtResource("1_frbyv")

[node name="home" type="Button" parent="Meshes"]
offset_left = 461.0
offset_top = -313.0
offset_right = 567.0
offset_bottom = -207.0
icon = ExtResource("3_q22wn")
flat = true
expand_icon = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="Meshes"]
modulate = Color(0.278431, 0.278431, 0.278431, 1)
position = Vector2(-575, -4.05312e-06)
scale = Vector2(8.75, 648)
mesh = SubResource("RibbonTrailMesh_v0y7f")

[node name="MeshInstance2D3" type="MeshInstance2D" parent="Meshes"]
modulate = Color(0.278431, 0.278431, 0.278431, 1)
position = Vector2(-0.755247, 326)
rotation = 1.5708
scale = Vector2(8.75, 1157.61)
mesh = SubResource("RibbonTrailMesh_v0y7f")

[node name="MeshInstance2D4" type="MeshInstance2D" parent="Meshes"]
modulate = Color(0.278431, 0.278431, 0.278431, 1)
position = Vector2(-0.755247, -322)
rotation = 1.5708
scale = Vector2(8.75, 1157.61)
mesh = SubResource("RibbonTrailMesh_v0y7f")

[node name="MeshInstance2D5" type="MeshInstance2D" parent="Meshes"]
modulate = Color(0.278431, 0.278431, 0.278431, 1)
position = Vector2(1.19209e-07, -160)
rotation = 1.5708
scale = Vector2(8.75, 1157.61)
mesh = SubResource("RibbonTrailMesh_v0y7f")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Meshes"]
modulate = Color(0.278431, 0.278431, 0.278431, 1)
position = Vector2(574, 9.53674e-07)
scale = Vector2(8.75, 648)
mesh = SubResource("RibbonTrailMesh_v0y7f")

[node name="tips" type="Label" parent="Meshes"]
top_level = true
anchors_preset = -1
anchor_left = -0.169271
anchor_top = -1.38117
anchor_right = -0.169271
anchor_bottom = -1.38117
offset_left = -308.0
offset_top = 471.998
offset_right = 692.0
offset_bottom = 860.998
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_b1xkq")
theme_override_font_sizes/font_size = 80
text = "Tips"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="post" type="Button" parent="Meshes"]
visible = false
offset_left = -199.0
offset_top = 168.0
offset_right = 201.0
offset_bottom = 288.0
theme_override_font_sizes/font_size = 70
text = "Post"

[node name="connect" type="Button" parent="Meshes"]
offset_left = -199.0
offset_top = 159.0
offset_right = 201.0
offset_bottom = 279.0
theme_override_font_sizes/font_size = 70
text = "Connect"

[node name="posts" type="Label" parent="Meshes"]
offset_left = -462.0
offset_top = -109.0
offset_right = 478.0
offset_bottom = 77.0

[node name="no one has posted" type="Label" parent="Meshes"]
offset_left = -462.0
offset_top = -109.0
offset_right = 467.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "No one has posted yet..."

[node name="Posts" type="TextEdit" parent="Meshes"]
visible = false
offset_left = -487.0
offset_top = -125.0
offset_right = 476.0
offset_bottom = 123.0

[node name="info" type="TextEdit" parent="Meshes"]
visible = false
offset_left = -487.0
offset_top = -125.0
offset_right = 476.0
offset_bottom = 123.0

[connection signal="pressed" from="Meshes/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Meshes/home" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Meshes/post" to="." method="_on_post_pressed"]
[connection signal="pressed" from="Meshes/connect" to="." method="_on_connect_pressed"]
